--- a/poem.rmd
+++ b/poem.rmd
@@ -1,7 +1,7 @@
 ---
 title: "git_00"
-author: "Your Name here"
-date: "Year 2020"
+author: "Michael Maida"
+date: "1 September 2021"
 output: html_document
 ---
 
@@ -15,12 +15,60 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## First Verse 
 <!--Put the first five lines of a poem by Lewis Carrol in this section!-->
-
+A boat beneath a sunny sky,  
+Lingering onward dreamily  
+In an evening of July —  
+Children three that nestle near,  
+Eager eye and willing ear,  
+  
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
-
+A tree’s leaves may be ever so good,  
+So may its bark, so may its wood;  
+But unless you put the right thing to its root  
+It never will show much flower or fruit.  
+But I may be one who does not care  
+  
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
-
+"The sun was shining on the sea,  
+      Shining with all his might:  
+He did his very best to make  
+      The billows smooth and bright —  
+And this was odd, because it was  
+      The middle of the night.  
+  
+The moon was shining sulkily,  
+      Because she thought the sun  
+Had got no business to be there  
+      After the day was done —  
+"It's very rude of him," she said,  
+      "To come and spoil the fun."  
+  
 ## Last Verse
 <!--Put a short poem of your choice 8-20 lines,here!-->
+Mother doesn't want a dog.  
+Mother says they smell,  
+And never sit when you say sit,  
+Or even when you yell.  
+  
+When you come home late at night  
+And there is ice and snow,  
+You have to go back ou because  
+The dumb dog has to go.  
+  
+Mother doesn't want a dog.  
+Mother says they shed,  
+And always let the strangers in  
+And bark at friends instead  
+  
+They do disgraceful things on rugs,  
+And track mud on the floor,  
+And flop upon your bed at night  
+And snore their doggy snore.  
+  
+Mother doesn't want a dog.  
+She's making a mistake.  
+Because, more than a dog, I think  
+She will not want this snake.  
+  
